2001-04-03  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (openssl): Publish and default to RSAREF; hide
	openssl, and only use it if explicitly requested (at least until
	we work with it).

2001-04-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/y2k.htm:
	* html/tickadj.htm:
	* html/release.htm:
	* html/refclock.htm:
	* html/quick.htm:
	* html/pps.htm:
	* html/ntptrace.htm:
	* html/ntptime.htm:
	* html/ntpq.htm:
	* html/ntpdc.htm:
	* html/ntpdate.htm:
	* html/ntpd.htm:
	* html/miscopt.htm:
	* html/index.htm:
	* html/genkeys.htm:
	* html/exec.htm:
	* html/driver7.htm:
	* html/driver22.htm:
	* html/copyright.htm:
	* html/confopt.htm:
	* html/build.htm:
	* html/authopt.htm:
	* html/assoc.htm:
	Updates from Dave Mills.
	
2001-04-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (OPENSSL): Just use -lcrypto.
	Reported by Dave Mills.

2001-03-31  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k20

	* ntpd/refclock_heath.c: Add support for GC-1000 II.
	From Dave Mills.

	* ntpd/ntp_proto.c (transmit): Check peer->unreach.
	(peer_clear): peer->outdate is a f(BURST_INTERVAL1), not
	NTP_MINPOLL.
	* ntpd/ntp_loopfilter.c (local_clock): mode_ntpdate stuff.
	* ntpd/ntp_crypto.c: OpenSSL/RSAREF support.
	* ntpd/cmd_args.c: Use -q, not -z, for mode_ntpdate.
	(getstartup): nofork on mode_ntpdate. Usage update.
	* include/ntp_crypto.h: OpenSSL/RSAREF support.
	From: Dave Mills.

	* configure.in (rsaref): Buglet.

2001-03-30  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_proto.c (clock_update): mode_ntpdate support.
	* ntpd/ntp_loopfilter.c	(local_clock): mode_ntpdate support.
	* ntpd/cmd_args.c: Added -z (mode_ntpdate).
	* include/ntpd.h: mode_ntpdate added.
	* include/ntp_crypto.h: RSAREF/OPENSSL cleanup.
	From: Dave Mills.

2001-03-29  Harlan Stenn  <stenn@whimsy.udel.edu>

	* config.h.in:
	* aclocal.m4:
	* configure.in: Prepare for OpenSSL support

2001-03-28  Harlan Stenn  <stenn@whimsy.udel.edu>
