@@ -1,5 +1,9 @@
 2001-04-03  Harlan Stenn  <stenn@whimsy.udel.edu>
 
+	* ntpd/refclock_oncore.c: 
+	* ntpd/refclock_conf.c: Make it go.
+	From: Reg Clemens <reg@dwf.com>
+
 	* configure.in (openssl): Publish and default to RSAREF; hide
 	openssl, and only use it if explicitly requested (at least until
 	we work with it).
